--- a/src/app/patient/dashboard/dashboard.component.css
+++ b/src/app/patient/dashboard/dashboard.component.css
@@ -1,6 +1,20 @@
+:host {
+  display: block;
+  margin-top: 1rem;
+}
+
+mat-spinner {
+  margin: auto;
+}
+
+mat-paginator {
+  margin-top: 1rem;
+}
+
 .app-card {
   width: 40%;
   display: inline-block;
+  margin-right: 30px;
 }
 
 button {
