--- a/src/app/patient/dashboard/dashboard.component.html
+++ b/src/app/patient/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
-<mat-spinner *ngIf="isLoading"></mat-spinner>
-<mat-card class="card">
+<mat-card class="card" *ngIf="isLoading">
+  <mat-spinner></mat-spinner>
+</mat-card>
+<mat-card class="card" *ngIf="!isLoading">
   <mat-card-header>
     <mat-card-title>Appointments</mat-card-title>
   </mat-card-header>
