--- a/src/app/doctor/dashboard/dashboard.component.html
+++ b/src/app/doctor/dashboard/dashboard.component.html
@@ -44,7 +44,7 @@
         <ng-container matColumnDef="action2">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let element">
-            <button mat-icon-button (click)="chat(element.patientId)">
+            <button mat-icon-button (click)="chat(element.roomId)">
               <mat-icon class="material-icons-outlined" style="background-color: rgb(26, 179, 26);color: white;">chat
               </mat-icon>
             </button>
