--- a/src/app/patient/dashboard/dashboard.component.html
+++ b/src/app/patient/dashboard/dashboard.component.html
@@ -17,7 +17,7 @@
     </mat-card-content>
     <mat-card-footer>
       <mat-card-actions align="end">
-        <button mat-button [routerLink]="['/patient/chat']">
+        <button mat-button (click)="chat(apps.roomId)">
           <mat-icon>chat</mat-icon>
         </button>
         <!-- <button mat-button (click)="confirmDialog()"><mat-icon>delete</mat-icon></button> -->
